MODIFICANDO VISTAS Y FUNCIONALIDADES FINALES, VERSION 1.0